Thanks Emilia for fixing the UI. Dark mode.

--- a/app/assets/stylesheets/round.scss
+++ b/app/assets/stylesheets/round.scss
@@ -1,7 +1,6 @@
 // Place all the styles related to the Round controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
-
-.create-form {
-    margin-top: 4em
-}
+ h1 {
+  font-family: 'Gafata', sans-serif;
+ }
